--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'com.libraryproject'
-    mainClass = 'com.libraryproject.HelloApplication'
+    mainModule = 'example'
+    mainClass = 'example.view.LibraryView'
 }
 
 javafx {
